force-app/main/default/objects/Order/fields/Aggregate_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Price_Adjustment__c</fullName>
    <label>Aggregate Price Adjustment</label>
    <summarizedField>OrderItem.Calculated_Price_Adjustment__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>