force-app/main/default/objects/Order/fields/Aggregate_Total_price__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Total_price__c</fullName>
    <label>Aggregate Total price</label>
    <summarizedField>OrderItem.Calculated_Price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>