force-app/main/default/objects/Order/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>