force-app/main/default/objects/Order/fields/Google_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Link__c</fullName>
    <inlineHelpText>קישור לדרייב המכיל את החוזים</inlineHelpText>
    <label>Google Drive Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>