force-app/main/default/objects/Order/fields/Moved_To__c.field-meta.xml
<CustomField>
    <fullName>Moved_To__c</fullName>
    <label>Moved To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other ROOMS Location</fullName>
            </value>
            <value>
                <fullName>Private office</fullName>
            </value>
            <value>
                <fullName>BE ALL</fullName>
            </value>
            <value>
                <fullName>Mixer</fullName>
            </value>
            <value>
                <fullName>Point</fullName>
            </value>
            <value>
                <fullName>Regus</fullName>
            </value>
            <value>
                <fullName>WeWork</fullName>
            </value>
            <value>
                <fullName>Brain Embassy</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Mindspace</fullName>
            </value>
            <value>
                <fullName>SOK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>