force-app/main/default/objects/Order/fields/Order_Origin__c.field-meta.xml
<CustomField>
    <fullName>Order_Origin__c</fullName>
    <label>Order Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Order</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>