force-app/main/default/objects/Order/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <description>Canonical order start date for Package Builder and business rules; mirrored to standard EffectiveDate on save.</description>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>