force-app/main/default/objects/Order/fields/Previous_Order__c.field-meta.xml
<CustomField>
    <fullName>Previous_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the previous order that this order is replacing.</description>
    <label>Previous Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Next Orders</relationshipLabel>
    <relationshipName>Next_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>