force-app/main/default/objects/Order/fields/Prints_Color__c.field-meta.xml
<CustomField>
    <fullName>Prints_Color__c</fullName>
    <label>Prints Color</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>