force-app/main/default/objects/Order/fields/Renewal_end_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_end_date__c</fullName>
    <description>Calculated end date of the renewal period from order end date and renewal period months.</description>
    <formula>DATE(
  YEAR(EndDate) + FLOOR((MONTH(EndDate) + Renewal_Period_Months__c - 1) / 12),
  MOD(MONTH(EndDate) + Renewal_Period_Months__c - 1, 12) + 1,
  DAY(EndDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal end date</label>
    <type>Date</type>
</CustomField>