force-app/main/default/objects/Order/fields/Renewal_Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price_Increase_Percent__c</fullName>
    <inlineHelpText>אחוז עליה במחיר בחידוש תקופה</inlineHelpText>
    <label>Renewal Price Increase Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>