force-app/main/default/objects/Order/fields/Replacement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Start_Date__c</fullName>
    <description>The date when this replacement order becomes active and the previous order&apos;s billing should stop. Defaults to today&apos;s date but can be manually overridden for future-dated replacements.</description>
    <inlineHelpText>This date determines when the old order&apos;s items will be curtailed. Leave blank to use today&apos;s date, or specify a future date for delayed switchovers.</inlineHelpText>
    <label>Replacement Start Date</label>
    <type>Date</type>
</CustomField>