force-app/main/default/objects/Order/fields/Total_Standard_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Standard_Product_Count__c</fullName>
    <label>Total Standard Product Count</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Type_Name__c</field>
        <operation>contains</operation>
        <value>Standard</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Temporary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>