force-app/main/default/objects/Order/fields/Track_CPI_Date__c.field-meta.xml
<CustomField>
    <fullName>Track_CPI_Date__c</fullName>
    <label>Track CPI Date</label>
    <type>Date</type>
</CustomField>